--- a/MaciaComella_AG1.ipynb
+++ b/MaciaComella_AG1.ipynb
@@ -44,7 +44,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "rTiqLuX2ZKuL",
-        "outputId": "c034dbcc-daf1-4782-dd99-e1df4d3a68e6",
+        "outputId": "1b64cb4f-d077-4e1a-86a4-ed44ef5c9f09",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -52,9 +52,6 @@
       "source": [
         "#Torres de Hanoi - Divide y venceras\n",
         "################################################################################\n",
-        "\n",
-        "\n",
-        "################################################################\n",
         "def Torres_Hanoi(N, desde, hasta):\n",
         "  #N - Nº de fichas\n",
         "  #desde - torre inicial\n",
@@ -67,10 +64,9 @@
         "    print(\"Lleva la ficha desde \" + str(desde) + \" hasta \" + str(hasta))\n",
         "    Torres_Hanoi(N-1, 6-desde-hasta,  hasta)\n",
         "\n",
-        "Torres_Hanoi(5, 1, 3)\n",
-        "################################################################"
+        "Torres_Hanoi(5, 1, 3)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -118,7 +114,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2f2e8241-63b6-4318-e62c-9c629d31c70d"
+        "outputId": "60302f6c-5894-48f0-c007-495fdcc81dce"
       },
       "source": [
         "#Cambio de monedas - Técnica voraz\n",
@@ -145,7 +141,7 @@
         "\n",
         "################################################################"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -165,7 +161,7 @@
         "id": "9toJ4WjhQUNj"
       },
       "source": [],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -175,7 +171,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "761efb82-f22f-4cf7-ace8-285197a1fdaa"
+        "outputId": "460d0989-f87c-4399-d278-5d3c9c772856"
       },
       "source": [
         "#N Reinas - Vuelta Atrás()\n",
@@ -201,7 +197,7 @@
         "#Traduce la solución al tablero\n",
         "################################################################\n",
         "def escribe_solucion(S):\n",
-        "################################################################\n",
+        "\n",
         "  n = len(S)\n",
         "  for x in range(n):\n",
         "    print(\"\")\n",
@@ -216,8 +212,7 @@
         "#Proceso principal de N-Reinas\n",
         "################################################################\n",
         "def reinas(N, solucion=[],etapa=0):\n",
-        "################################################################\n",
-        "### ....\n",
+        "\n",
         "  if len(solucion) == 0:         # [0,0,0...]\n",
         "    solucion = [0 for i in range(N) ]\n",
         "\n",
@@ -235,7 +230,7 @@
         "\n",
         "reinas(4,solucion=[],etapa=0)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -254,12 +249,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f8675177-7cbe-4b04-99cc-0b66abdab784"
+        "outputId": "7a2a5c63-f184-4904-99bd-638e5cd37006"
       },
       "source": [
         "escribe_solucion([3, 1, 4, 2])"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -278,7 +273,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "TocxR55dQWq5",
-        "outputId": "0e6dace0-c8b7-4b9e-8f27-c3676d60594e",
+        "outputId": "8b78d8f0-4e98-4280-dd10-1aa3cc7647bb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 365
@@ -353,7 +348,7 @@
         "print(\"\\nLa ruta es:\")\n",
         "calcular_ruta(RUTA, 0,6)"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -391,27 +386,235 @@
             }
           },
           "metadata": {},
-          "execution_count": 31
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Encontrar 2 puntos más cercanos"
+      ],
+      "metadata": {
+        "id": "TKysMUkVDXzH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Utilizamos numpy para generar los números aleatorios\n",
+        "!pip install numpy\n",
+        "import numpy as np"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pr8aFamRoBu0",
+        "outputId": "3cb7fec6-1418-4e81-bdc4-552a19618b1e"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.10/dist-packages (1.23.5)\n"
+          ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "D1 = np.random.randint(10000, size=10)\n",
+        "print(D1)"
+      ],
       "metadata": {
-        "id": "2vAtq9PIn_Uw"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UW5td2AwuuMu",
+        "outputId": "21e85841-2996-4865-df52-95349943592f"
       },
-      "execution_count": 30,
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[7877 5564  792  620 8731 9776 5778 9404 7346 9532]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Resolución por fuerza bruta. En comentario el orden computacional de cada línea\n",
+        "def pares_fuerza_bruta(lista):\n",
+        "  lista = np.array(lista) # 1 operación\n",
+        "  result = [] # 1 operación\n",
+        "  dist = np.inf # 1 operación\n",
+        "  for index_i, i in enumerate(lista):\n",
+        "    lista2 = lista.copy() # n operaciones\n",
+        "    lista2 = np.delete(lista2, index_i) # n operaciones\n",
+        "    for j in lista2:\n",
+        "      if abs(i-j) < dist: # n operaciones\n",
+        "        result = [i, j] # n operaciones\n",
+        "        dist = abs(i-j) # n operaciones\n",
+        "\n",
+        "  return result # 1 operación"
+      ],
+      "metadata": {
+        "id": "fVAw-BbBP0fk"
+      },
+      "execution_count": 18,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print(D1)\n",
+        "pares_fuerza_bruta(D1)"
+      ],
       "metadata": {
-        "id": "pr8aFamRoBu0"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IUGYIpEirgOD",
+        "outputId": "89c77811-5bd0-407f-adfc-9728a215cbad"
       },
       "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[5488 7887 2257  232 6373 6300 6789 9331 6401 7630]\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[6373, 6401]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Complejidad con fuerza bruta:** se recorre la lista 2 veces, por lo tanto O(n) = 3 + 2n*(3n) = 6n^2"
+      ],
+      "metadata": {
+        "id": "beqPWcMiu_Wj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Aplicación de Divide y Vencerás\n",
+        "def pares_DiV(lista):\n",
+        "  dist = np.inf\n",
+        "  result = [-np.inf, np.inf]\n",
+        "\n",
+        "  if len(lista) == 1:\n",
+        "    return [lista[0], np.inf]\n",
+        "\n",
+        "  if len(lista) == 2:\n",
+        "    dist = abs(lista[0] - lista[1])\n",
+        "    result = [lista[0], lista[1]]\n",
+        "\n",
+        "  s_list = np.sort(lista)\n",
+        "\n",
+        "  if len(lista) > 2:\n",
+        "    pivote = len(lista)//2\n",
+        "    left_l = s_list[:pivote]\n",
+        "    right_l = s_list[pivote:]\n",
+        "    left_min = pares_DiV(left_l)\n",
+        "    right_min = pares_DiV(right_l)\n",
+        "\n",
+        "    if abs(left_min[0] - left_min[1]) <= abs(right_min[0] - right_min[1]):\n",
+        "      result = left_min\n",
+        "      dist = abs(left_min[0] - left_min[1])\n",
+        "    else:\n",
+        "      result = right_min\n",
+        "      dist = abs(right_min[0] - right_min[1])\n",
+        "\n",
+        "    if abs(left_min[-1] - right_min[0]) < dist:\n",
+        "      result = [left_min[-1], right_min[0]]\n",
+        "      dist = abs(left_min[-1] - right_min[0])\n",
+        "\n",
+        "  return result.copy()"
+      ],
+      "metadata": {
+        "id": "JCqZRTnIuUJ2"
+      },
+      "execution_count": 130,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "D1 = [5564,  792,9404, 8731, 9776, 5778, 7346, 9532, 620]\n",
+        "print(np.sort(D1))\n",
+        "# pares_DiV([1,5,63,3,7,5,15,62])\n",
+        "R_DiV = pares_DiV(D1)\n",
+        "R_FB = pares_fuerza_bruta(D1)\n",
+        "print(f\"resultado Divide y Vencerás: {R_DiV}, distancia: {abs(R_DiV[0]-R_DiV[1])}\")\n",
+        "print(f\"resultado Fuerza Bruta: {R_FB}, distancia: {abs(R_FB[0]-R_FB[1])}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "92kO3LHv1cjD",
+        "outputId": "333c17e0-6ece-460e-bbbf-ae55ac62f9ab"
+      },
+      "execution_count": 131,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[ 620  792 5564 5778 7346 8731 9404 9532 9776]\n",
+            "resultado Divide y Vencerás: [620, 792], distancia: 172\n",
+            "resultado Fuerza Bruta: [9404, 9532], distancia: 128\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "l = [1,4,5,8,15]\n",
+        "pares_DiV(l)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CwfCoKHngzBK",
+        "outputId": "fbf6096f-b5de-4f11-cd39-9cb268165a34"
+      },
+      "execution_count": 126,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 4]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 126
+        }
+      ]
     }
   ]
 }
