--- a/MaciaComella_AG2.ipynb
+++ b/MaciaComella_AG2.ipynb
@@ -17,7 +17,7 @@
       },
       "source": [
         "#AG2 - Actividad Guiada 2\n",
-        "Nombre: Raul Reyero <br>\n",
+        "Nombre: Macià Comella Barbé <br>\n",
         "Link:   https://colab.research.google.com/drive/1jbAlOEVuUcmQdiCoYiWjEpRXlOE3vZFS?authuser=1 <br>\n",
         "Github: https://github.com/Macia-Comella/03MAIR---Algoritmos-de-Optimizacion/blob/main/MaciaComella_AG2.ipynb\n",
         "<br>\n",
@@ -291,7 +291,8 @@
       "execution_count": 18,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "GLrebA2z64WP",
         "outputId": "3d23506d-3e51-4c45-83da-2165beedb2f0"
@@ -326,7 +327,8 @@
       "execution_count": 19,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "fXG2CAq87Csv",
         "outputId": "cdc3bc6a-ba5d-4889-9cab-f2e34c15e735"
@@ -395,7 +397,8 @@
       "execution_count": 21,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "4xBiYAKNADKC",
         "outputId": "4fff08a3-4a05-4ac6-b1ac-505fe477bec3"
@@ -729,7 +732,8 @@
       "execution_count": 31,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "mfFgBz7p-HNo",
         "outputId": "76e957d8-1ca3-4d5d-c4b4-3a6611214e50"
@@ -770,7 +774,8 @@
       "execution_count": 48,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "pVMxstQnE-eH",
         "outputId": "11f15737-7a03-48b3-b24a-7c149cb8152c"
